<resources>

    <string name="app_name">WorkGuru</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="remember_me">Remember me</string>
    <string name="password">Password</string>
    <string name="email_address">Email address</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in_to_your_account">Sign in to your
        account</string>
    <string name="sign_up_as_a_client">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="i_agree_to_the_terms_and_conditions">I agree to the Terms and Conditions</string>
    <string name="terms_and_conditions_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In vestibulum phasellus pellentesque arcu, cursus pellentesque elementum. Curabitur ultrices ut blandit facilisis vitae venenatis. Eget nec fringilla volutpat aliquam, nunc, egestas orci ipsum blandit. Dolor eu sed tellus ullamcorper sed nunc. Bibendum adipiscing sapien sagittis ut orci. Non purus augue imperdiet tristique phasellus in. Auctor nunc, odio nibh aliquet eget aliquam. Risus viverra eu mattis elementum leo, tempus massa risus. Sapien fringilla ut cursus morbi mauris nibh sollicitudin. Cum et ut sapien scelerisque neque dolor. Non pulvinar risus viverra vitae id sed. Lacus est aliquam id sit sit pulvinar sit. Dui sit consectetur eget orci diam odio at. Eros, potenti non placerat eu ut eu sed.</string>
    <string name="i_accept">I accept</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="enter_the_email">Enter the email address associated with your account and we’ll send you a link to reset your password.</string>
    <string name="continue_for_btn">Continue</string>
    <string name="forgot_your_password">Forgot your Password?</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="fullname">Full name</string>
    <string name="sign_in_with_face_recognition">Sign in with face recognition</string>
    <string name="detect_your_face">Detect your face</string>
    <string name="more">More</string>
    <string name="search">Search</string>
    <string name="content_description_search">content_description_search</string>
    <string name="content_description_more">content_description_more</string>
    <string name="home">Home</string>
    <string name="person">Person</string>
    <string name="profile">Profile</string>
    <string name="dashboard">Dashboard</string>
    <string name="settings">Settings</string>
    <string name="pomodoro">Pomodoro</string>
    <string name="colleagues">Colleagues</string>
    <string name="help_requests">Help requests</string>
    <string name="about_us">About us</string>
    <string name="help">Help</string>
    <string name="change">Change</string>
    <string name="remove">Remove</string>
    <string name="this_is_your_username">(This is your Username)</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="full_name">Full Name</string>
    <string name="cancel">Cancel</string>
    <string name="phone_number">Phone number</string>
    <string name="country_region">Country/Region</string>
    <string name="city">City</string>
    <string name="state_province">State/Province</string>
    <string name="street_address">Street address</string>
    <string name="zip_postal">ZIP/Postal</string>
    <string name="projects">Projects</string>
    <string name="insights">Insights</string>
    <string name="sign_out">Sign out</string>
    <string name="filter">Filter</string>
    <string name="order_by">Order by</string>
    <string name="start_tracking">Start tracking</string>
    <string name="please_type_some_category_name">Please type some category name</string>
    <string name="new_category">New category</string>
    <string name="create_category">create category</string>
    <string name="please_select_a_project_to_start_tracking">Please select a project to start tracking</string>
    <string name="select_a_project">Select a project</string>
    <string name="create_new_project">Create new project</string>
    <string name="turn_on_off_notifications">Turn on/off notifications:</string>
    <string name="programming_skills">Programming skills</string>
    <string name="invite_user">Invite user</string>
    <string name="invite_a_new_user">Invite a new user</string>
    <string name="invite_link_helper_text">Enter the email address of the user you wish to invite and we’ll send them an invite link.</string>
    <string name="send_invite">Send invite</string>
    <string name="no_timer">No timer</string>
    <string name="notLoggedInException">\"Not Logged in \"</string>
    <string name="tloggedOut">You are logged out!</string>
    <string name="tRoleException">🖐 As a user you can\'t send invitation to others!</string>
    <string name="tTypSomething">Type something…</string>
    <string name="htRequiredField">This field is required!</string>
    <string name="htNotValidEmail">Not a valid email!</string>
    <string name="mPleaseWait">⌛️Please wait…</string>
    <string name="tDetectFaces">Detect %d faces in pictures</string>
    <string name="htEmailWasNotSent">If you didn\'t get any email from us check it twice or try again this flow or contact us</string>
    <string name="tSessionExpired">🙃 Your session has been expired! You need to log in again…</string>
    <string name="mAreYouSureExit"> 🤔 Are you sure you want to exit?</string>
    <string name="bCancel">Cancel</string>
    <string name="tTermsAndConditions">😉 You just accepted the Terms and Conditions</string>
    <string name="mTrackedLastDays">Tracked - Last 30 Days no dark</string>
    <string name="tNotASingleMatch">❌ Oops! Not a single match…</string>
    <string name="orderByName">Order by name</string>
    <string name="orderByStartDate">Order by start date</string>
    <string name="orderByCategory">Order by category</string>
    <string name="tYouNotSelectedAnyCategory">‼️ You not selected any category</string>
    <string name="charts">Charts</string>
    <string name="statements">Statements</string>
    <string name="save">Save</string>
    <string name="mAreYouSureSave">❓ Are you sure you want save changes?</string>
    <string name="tPleaseCorrectData">❗️ Please correct the specific data!</string>
    <string name="mAreYouSureLeave">❓ Are you sure you want to leave without saving?</string>
    <string name="tNewCategoryCreated">✅ A new category just created successfully!</string>
    <string name="tCategoryAlreadyExist">❌ This category is already exist!</string>
    <string name="tNewProjectCreated">✅ A new project just created successfully!</string>
    <string name="tProjectAlreadyExist">❌ This project is already exist!</string>
    <string name="tTimerStarted">✅ A timer is started!</string>
    <string name="actualTimer">Actual Timer</string>
    <string name="timer_on">Timer on</string>
    <string name="project_name">Project name</string>
    <string name="task_on">Task on</string>
    <string name="task_name">Task name</string>
    <string name="skill_on">Skill on</string>
    <string name="status">Status</string>
    <string name="technologies">Technologies:</string>
    <string name="new_project">New project</string>
    <string name="please_select_a_category_to_create_project">❗️Please select a category to create project</string>
    <string name="didn_t_find_what_you_re_looking_for_you_might_need_to_create_a_category_first">Didn\'t find what you\'re looking for? You might need to create a category first</string>
    <string name="task_descriptions">Task descriptions</string>
    <string name="didn_t_find_what_you_re_looking_for_you_might_need_to_create_a_project_first">Didn\'t find what you\'re looking for? You might need to create a project first</string>
    <string name="select_a_skill">Select a skill</string>
    <string name="colleague_status">Colleague status</string>
    <string name="select_a_status">Select a status</string>
    <string name="minimum_work_time_in_hour">Minimum work time in hour:</string>
    <string name="category">Category</string>
    <string name="numbers_of_member">Numbers of member</string>
    <string name="started_after">Started after</string>
    <string name="return_to">Return to</string>
    <string name="country">Country</string>
    <string name="totalNumberToday">Total number of hours today compared to yesterday</string>
    <string name="totalNumberWeek">Total number of hours this week compared to last week</string>
    <string name="totalNumberMonth">Total number of hours this month compared to last month</string>
    <string name="pomodoro_mode">Pomodoro mode:</string>
    <string name="how_many_session">How many session?</string>
    <string name="one_session_duration">One session duration:</string>
    <string name="log_out">Log out</string>
    <string name="start_date">Start Date</string>
    <string name="tasks">Tasks</string>
    <string name="members">Members</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="select_ordering">Select Ordering</string>
    <string name="please_select_a_skill_you_need_for_this_task">Please select a skill you need for this task</string>
    <string name="didn_t_find_what_you_re_looking_for_you_might_need_to_create_a_new_skill">❗️Didn\'t find what you\'re looking for? You might need to create a new skill.</string>
    <string name="j_dont_know">I don\'t know</string>
    <string name="update_status">Update status</string>
    <string name="something_went_wrong">❌ Something went wrong. Try again!</string>
    <string name="new_skill">New Skill</string>
    <string name="please_type_your_new_skill_name_here">Please type your new skill name here.</string>
    <string name="email_already_exist">❌ The given email already exist in the database or not correct. Try something else…</string>
    <string name="create_new_skill">Create new skill</string>
    <string name="new_skill_created">✅ A new skill was created!</string>
    <string name="skill_already_exist">❌ This skill is already exist!</string>
    <string name="send_message">✅ Send message</string>
    <string name="please_type_your_message_here">Please type your message here.</string>
    <string name="send">Send</string>
    <string name="we_couldnt_sen_message">❌ We couldn\'t send your message.</string>
    <string name="reply">reply</string>
    <string name="messages">Messages</string>
    <string name="sent_messages">✅ Sent Messages</string>
    <string name="received_messages">Received messages</string>
    <string name="we_can_not_accept">We can\'t accept this user</string>
    <string name="they_are_waiting_to_be_accapted">They are waiting to be accapted</string>
    <string name="accept">Accept</string>
    <string name="accept_users">Accept users</string>

    <string name="store">Store</string>
    <string name="update">Update</string>
    <string name="connected">✔️Connected</string>
    <string name="lost_internet_connection">❌ Lost internet connection!</string>
    <string name="you_logged_in">✅ You logged in!</string>
    <string name="timer_expired">‼️Timer Expired!</string>
    <string name="start_again">🔄 Start again?</string>
    <string name="start">Start</string>
    <string name="timer_is_running">✅ Timer is Running.</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="timer_is_paused">⏸ Timer is paused.</string>
    <string name="resume">⏯ Resume?</string>
    <string name="resume_btn">Resume</string>
    <string name="you_havent_got_any_request_yet">❌ You haven\'t got any request yet.</string>
    <string name="you_started_a_new_timer">✅ You just started a new timer!</string>
    <string name="the_timer_was_stopped">⏹ The timer was stopped!</string>
    <string name="the_timer_was_paused">▶️The timer was paused!</string>
    <string name="check_your_connection">❗️Check your connection!</string>
    <string name="please_add_your_email_first">❗️Please add your email first!</string>
    <string name="you_havent_start_any_project_yet">❌ You haven\'t start any project yet!</string>
    <string name="category_name_already_exist">❌ This category name is already taken! Please try something else!</string>
    <string name="project_name_already_exist">❌ This project name already exist under this category!</string>
    <string name="please_do_not_let_any_field_empty">‼️Please do not let any field empty!</string>
    <string name="only_availables">Only availables</string>
    <string name="only_admin">Only admin?</string>
    <string name="order_by_working_hours">Order by working hours</string>
    <string name="order_by_email">Order by email</string>
    <string name="no_more_item">No more item!</string>
</resources>