...
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    >


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/category_name_text_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="80"
                        android:selectAllOnFocus="true"
                        android:singleLine="false"
                        app:boxStrokeColor="@color/red_500"
...
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/save_category_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/teal_500"
                    android:text="@string/save"
                    android:fontFamily="@font/inter"
                    />
...
