...
                    android:text="@string/didn_t_find_what_you_re_looking_for_you_might_need_to_create_a_category_first"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:fontFamily="@font/interlight"
                    android:textSize="12sp"
                    />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/create_new_category_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/teal_500"
                    android:text="@string/create_category"
                    android:fontFamily="@font/inter"
                    android:drawableLeft="@drawable/ic_baseline_add_circle_24"
...
